added new notes

--- a/MLE-Perspective/MLE-Engineering.ipynb
+++ b/MLE-Perspective/MLE-Engineering.ipynb
@@ -173,6 +173,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "### When talking about the relational model compared to the document model, many people think of the former as structured and the latter as unstructured. The division between structured and unstructured data is quite fluid—the main question is who has to shoulder the responsibility of assuming the structure of data. Structured data means that the code that writes the data has to assume the structure. Unstructured data means that the code that reads the data has to assume the structure."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
