--- a/MLE-Perspective/Model-Development.ipynb
+++ b/MLE-Perspective/Model-Development.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "- Form the final strong classifier as a weighted combination of the existing classifiers—classifiers with smaller training errors have higher weights.\n",
     "\n",
-    "### Stacking\n",
+    "## Stacking\n",
     "\n",
     "### Stacking means that you train base learners from the training data then create a meta-learner that combines the outputs of the base learners to output final predictions, as shown in Figure 6-5. The meta-learner can be as simple as a heuristic: you take the majority vote (for classification tasks) or the average vote (for regression tasks) from all base learners. It can be another model, such as a logistic regression model or a linear regression model.\n",
     "\n",
