added new models

--- a/Natural-Language-Process/transformer.ipynb
+++ b/Natural-Language-Process/transformer.ipynb
@@ -39,6 +39,25 @@
     "## Beam Search Decoding\n",
     "- Instead of decoding the token with the highest probability at each step, beam search keeps track of the top-b most probable next tokens, where b is referred to as the number of beams or partial hypotheses. The next set of beams are chosen by considering all possible next-token extensions of the existing set and selecting the b most likely extensions. The process is repeated until we reach the maximum length or an EOS token, and the most likely sequence is selected by ranking the b beams according to their log probabilities. An example of beam search is shown in Figure 5-4."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Auto Regressive Models\n",
+    "\n",
+    "### The goal is to predict a future token given either the past tokens or future tokens but not both\n",
+    "\n",
+    "\n",
+    "## Auto-Encoding Models\n",
+    "\n",
+    "### Goal is to learn representations of the entire sequence by predicting tokens given both the past and future tokens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
