added new models

--- a/Natural-Language-Process/transformer.ipynb
+++ b/Natural-Language-Process/transformer.ipynb
@@ -48,10 +48,14 @@
     "\n",
     "### The goal is to predict a future token given either the past tokens or future tokens but not both\n",
     "\n",
+    "### Naturl Language Generation (GPT-Family)\n",
+    "\n",
     "\n",
     "## Auto-Encoding Models\n",
     "\n",
-    "### Goal is to learn representations of the entire sequence by predicting tokens given both the past and future tokens"
+    "### Goal is to learn representations of the entire sequence by predicting tokens given both the past and future tokens\n",
+    "\n",
+    "### Natural Language Understanding (BERT)"
    ]
   },
   {
