added new models

--- a/Natural-Language-Process/attention.ipynb
+++ b/Natural-Language-Process/attention.ipynb
@@ -146,6 +146,26 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Example\n",
+    "\n",
+    "### X = number of tokens X token dimesnion\n",
+    "\n",
+    "### We perform three linear transformations on the matrix X to project it onto three new vector spaces called the:\n",
+    "- Query space\n",
+    "- Key Space\n",
+    "-  Value space\n",
+    "\n",
+    "\n",
+    "### Lets say we have a  4 by 2 matrix\n",
+    "- We perform three linear transformations using the dot product\n",
+    "- This creates W^Q, W^K, W^V matrices which are 3 by 4 matrices\n",
+    "- Finally another linear transformation creates a 3 by 3 matrix for our example of an initial 4 by 2 matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
