added new models

--- a/Natural-Language-Process/attention.ipynb
+++ b/Natural-Language-Process/attention.ipynb
@@ -160,7 +160,11 @@
     "### Lets say we have a  4 by 2 matrix\n",
     "- We perform three linear transformations using the dot product\n",
     "- This creates W^Q, W^K, W^V matrices which are 3 by 4 matrices\n",
-    "- Finally another linear transformation creates a 3 by 3 matrix for our example of an initial 4 by 2 matrix"
+    "- Finally another linear transformation creates a 3 by 3 matrix for our example of an initial 4 by 2 matrix\n",
+    "\n",
+    "### Attention scores are then created\n",
+    "- Smaller values meant vectors were not close and therefore less attention in score\n",
+    "- Larger values meant vectors were close and therefore more attention"
    ]
   },
   {
