added new models

--- a/Natural-Language-Process/attention.ipynb
+++ b/Natural-Language-Process/attention.ipynb
@@ -164,7 +164,13 @@
     "\n",
     "### Attention scores are then created\n",
     "- Smaller values meant vectors were not close and therefore less attention in score\n",
-    "- Larger values meant vectors were close and therefore more attention"
+    "- Larger values meant vectors were close and therefore more attention\n",
+    "\n",
+    "### Next \n",
+    "- We divide by the number of square root of the number of dimensions \n",
+    "- Then apply the soft max function which creates a probability disttribution which adds up to 1 which maintains order. This represents the confidence level of each token by probability %\n",
+    "- Then we multiply these values by the value of each token\n",
+    "  "
    ]
   },
   {
