added new models

--- a/Natural-Language-Process/attention.ipynb
+++ b/Natural-Language-Process/attention.ipynb
@@ -169,7 +169,7 @@
     "### Next \n",
     "- We divide by the number of square root of the number of dimensions \n",
     "- Then apply the soft max function which creates a probability disttribution which adds up to 1 which maintains order. This represents the confidence level of each token by probability %\n",
-    "- Then we multiply these values by the value of each token\n",
+    "- Then we multiply these attention scores by our value scores which creates the context-full embedding\n",
     "  "
    ]
   },
