added new models

--- a/Natural-Language-Process/attention.ipynb
+++ b/Natural-Language-Process/attention.ipynb
@@ -170,7 +170,10 @@
     "- We divide by the number of square root of the number of dimensions \n",
     "- Then apply the soft max function which creates a probability disttribution which adds up to 1 which maintains order. This represents the confidence level of each token by probability %\n",
     "- Then we multiply these attention scores by our value scores which creates the context-full embedding\n",
-    "  "
+    "\n",
+    "\n",
+    "### Mathematically \n",
+    "  softmax(QK^T/sqrt(dk))"
    ]
   },
   {
