added new models

--- a/Natural-Language-Process/attention.ipynb
+++ b/Natural-Language-Process/attention.ipynb
@@ -173,7 +173,10 @@
     "\n",
     "\n",
     "### Mathematically \n",
-    "  softmax(QK^T/sqrt(dk))"
+    "  - softmax(QK^T/sqrt(dk)) * the value matrix which represents semantic meaning\n",
+    "\n",
+    "  ### Each row represents a token and each column represents a context full dimension row of meaning.\n",
+    "  ### Which results in a relevant matrix"
    ]
   },
   {
