--- a/Natural-Language-Process/Code-Examples/Transforemr-Code.ipynb
+++ b/Natural-Language-Process/Code-Examples/Transforemr-Code.ipynb
@@ -76,6 +76,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BertLayer(\n",
+       "  (attention): BertAttention(\n",
+       "    (self): BertSelfAttention(\n",
+       "      (query): Linear(in_features=768, out_features=768, bias=True)\n",
+       "      (key): Linear(in_features=768, out_features=768, bias=True)\n",
+       "      (value): Linear(in_features=768, out_features=768, bias=True)\n",
+       "      (dropout): Dropout(p=0.1, inplace=False)\n",
+       "    )\n",
+       "    (output): BertSelfOutput(\n",
+       "      (dense): Linear(in_features=768, out_features=768, bias=True)\n",
+       "      (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "      (dropout): Dropout(p=0.1, inplace=False)\n",
+       "    )\n",
+       "  )\n",
+       "  (intermediate): BertIntermediate(\n",
+       "    (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "    (intermediate_act_fn): GELUActivation()\n",
+       "  )\n",
+       "  (output): BertOutput(\n",
+       "    (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "    (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "    (dropout): Dropout(p=0.1, inplace=False)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.encoder.layer[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
