--- a/Natural-Language-Process/Code-Examples/Transforemr-Code.ipynb
+++ b/Natural-Language-Process/Code-Examples/Transforemr-Code.ipynb
@@ -837,6 +837,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.1 Transfer Learning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
