added new changes

--- a/Deep-Learning/transfer-learning.ipynb
+++ b/Deep-Learning/transfer-learning.ipynb
@@ -11,6 +11,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Fine Tuning\n",
+    "\n",
+    "- Upate the whole model on labeled data + any additional layers added on top\n",
+    "- Freeze a subset of the model\n",
+    "- Freeze the whole model and only train the additional layers added on top"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
