--- a/Natural-Language-Process/Code-Examples/Transformer-Code.ipynb
+++ b/Natural-Language-Process/Code-Examples/Transformer-Code.ipynb
@@ -840,7 +840,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1 Transfer Learning"
+    "## Tensors\n",
+    "\n",
+    "### N Dimensional arrays. These objects are functionally no different than arrays in Numpy"
    ]
   },
   {
