added new models

--- a/Natural-Language-Process/BERT.ipynb
+++ b/Natural-Language-Process/BERT.ipynb
@@ -15,14 +15,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encoder\n",
+    "\n",
+    "### The encoder understands the context of each word in the sentence using a multi-head attention mechanism (which relates each word to every other words in the sentence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
