added new models;

--- a/Natural-Language-Process/BERT.ipynb
+++ b/Natural-Language-Process/BERT.ipynb
@@ -26,6 +26,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Bert is an encoder stack\n",
+    "\n",
+    "### CLS token is a special token specific to BERT, its goal is to represent the entire sequence in one vector. \n",
+    "\n",
+    "### The CLS token has been pretrained to represent the vector or text\n",
+    "\n",
+    "### SEP which is short for separator is meant to represent a seperation between two sequences. \n",
+    "\n",
+    "### 1 Sequence is where the first sequence is for a classification for a text.\n",
+    "### 1 and 2 Sequences is for the question and the answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
