added new models

--- a/Natural-Language-Process/BERT.ipynb
+++ b/Natural-Language-Process/BERT.ipynb
@@ -42,6 +42,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Bert Sizes\n",
+    "\n",
+    "### Bert Small 15M learnable parameters\n",
+    "\n",
+    "### Bert Base is 110M learnable parameters\n",
+    "\n",
+    "### Bert Large is 340M learnable parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
