added new models

--- a/Natural-Language-Process/BERT.ipynb
+++ b/Natural-Language-Process/BERT.ipynb
@@ -55,6 +55,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Bert Wordpiece Tokenization\n",
+    "\n",
+    "### Bert's tokenizer is great at handling tokens that are OOV (out of vocabulary) by breaking them up into smaller chunks of known tokens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
