aded new models

--- a/Natural-Language-Process/BERT.ipynb
+++ b/Natural-Language-Process/BERT.ipynb
@@ -64,6 +64,29 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Berts Embeddings Layer\n",
+    "\n",
+    "### Token Embeddings\n",
+    "- Represents context-less meaning of each token\n",
+    "- A lookup of 30,522 possible vectors (for BERT-base)\n",
+    "- This is learnable during training\n",
+    "\n",
+    "### Segment Embeddings\n",
+    "- Disstinguishes between multiple inputs (for Q/A for example)\n",
+    "- A lookup of 2 possible vectors (one for sentence A for sentence B)\n",
+    "- This is not learnable\n",
+    "\n",
+    "### Position Embeddings\n",
+    "- Used to represent the token's position in the sentence\n",
+    "- This is not learnable\n",
+    "\n",
+    "### Bert can figure out if a token is at the beginning or at the end based on the sin/ cos wave calculation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
