added new notes on feature stores

--- a/ML-OPS/feature-store.ipynb
+++ b/ML-OPS/feature-store.ipynb
@@ -17,6 +17,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Here are some major benefits of a feature store:\n",
+    "\n",
+    "- Faster development with far fewer engineering resources\n",
+    "\n",
+    "- Smooth migration from development to production\n",
+    "\n",
+    "- Increased model accuracy (same pipeline for online and offline)\n",
+    "\n",
+    "- Better collaboration and security across teams\n",
+    "\n",
+    "- Ability to track lineage and address regulatory compliance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
