added new models

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -17,6 +17,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## ML pipelines can be started manually or (preferably) triggered automatically when:\n",
+    "\n",
+    "- The code, packages, or parameters change.\n",
+    "\n",
+    "- The input data or feature engineering logic change.\n",
+    "\n",
+    "- Concept drift is detected, and the model needs to be retrained with fresh data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
