added new notes

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -30,6 +30,24 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## ML pipelines have the following features:\n",
+    "\n",
+    "- Built using microservices (containers or serverless functions), usually over Kubernetes.\n",
+    "\n",
+    "- Track all their inputs (code, package dependencies, data, parameters) and the outputs (logs, metrics, data/features, artifacts, models) for every step in the pipeline in order to reproduce or explain experiment results.\n",
+    "\n",
+    "- Version all the data and artifacts used throughout the pipeline.\n",
+    "\n",
+    "- Store code and configuration in versioned Git repositories.\n",
+    "\n",
+    "- Use CI techniques to automate the pipeline initiation, test automation, review, and approval process.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
