added new models

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -48,6 +48,30 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Pipelines should be executed over scalable services or functions, which can span elastically over multiple servers or containers. This way, jobs complete faster, and computation resources are freed up once they are complete, saving high costs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## You can find projects where the data preparation, training, evaluation, and even prediction are all made in one huge Notebook, but this approach can lead to challenges when moving to production, for example:\n",
+    "\n",
+    "- Very hard to track the code changes across versions (in Git).\n",
+    "\n",
+    "- Almost impossible to implement test harnesses and unit testing.\n",
+    "\n",
+    "- Functions cannot be reused in various projects.\n",
+    "\n",
+    "- Moving to production requires code refactoring and removal of visualization or scratch code.\n",
+    "\n",
+    "- Lack of proper documentation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
