added new models

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -72,6 +72,23 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Data quality tests\n",
+    "- The dataset used for training is of high quality and does not carry bias.\n",
+    "\n",
+    "### Model performance tests\n",
+    "- The model produces accurate results.\n",
+    "\n",
+    "### Serving application tests\n",
+    "- The deployed model along with the data pre- or post-processing steps are robust and provide adequate performance.\n",
+    "\n",
+    "### Pipeline tests\n",
+    "- Ensuring the automated development pipeline handles various exceptions and the desired scale."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
