added new models

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -89,6 +89,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Here are some examples of data quality tests:\n",
+    "\n",
+    "- There are no missing values.\n",
+    "\n",
+    "- Values are of the correct type and fall under an expected range (for example, user age is between 0-120, with anticipated average and standard deviation).\n",
+    "\n",
+    "- Category values fall within the possible options (for example, city names match the options in a city name list).\n",
+    "\n",
+    "- There is no bias in the data (for example, the gender feature has the anticipated percentage of men and women)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
