added new notes

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -104,6 +104,25 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Tests can improve the model quality:\n",
+    "\n",
+    "- Verify the performance is maintained across essential slices of the data (for example, devices by model, users by country or other categories, movies by genre) and that it does not drop significantly for a specific group.\n",
+    "\n",
+    "- Compare the model results with previous versions or a baseline version and verify the performance does not degrade.\n",
+    "\n",
+    "- Test different parameter combinations (hyperparameter search) to verify you chose the best parameter combination.\n",
+    "\n",
+    "- Test for bias and fairness by verifying that the performance is maintained per gender and specific populations.\n",
+    "\n",
+    "- Check feature importances and whether there are features with a marginal contribution that can be removed from the model.\n",
+    "\n",
+    "- Test for immunity to fake, random, or malicious input vectors to increase robustness and defend against adversarial attacks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
