added new concept drift notes

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -123,6 +123,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Monitoring Data and Concept Drift\n",
+    "### Concept drift is a phenomenon where the statistical properties of the target variable (y, which the model is trying to predict) change over time. Data drift (virtual drift) happens when the statistical properties of the inputs changes. In drift, the model built on past data no longer applies, and assumptions made by the model on past data need to be revised based on current data. Figure 2-18 illustrates the differences between concept drift and virtual (data) drift."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
