added new notes

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -131,6 +131,28 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "\n",
+    "## The monitoring system saves the various feature statistics (min, max, average, stddev, histogram, and so on), and the drift level is calculated using one or more of the following metrics:\n",
+    "\n",
+    "- Kolmogorov–Smirnov test\n",
+    "\n",
+    "- Kullback–Leibler divergence\n",
+    "\n",
+    "- Jensen–Shannon divergence\n",
+    "\n",
+    "- Hellinger distance\n",
+    "\n",
+    "- Standard score (Z-score)\n",
+    "\n",
+    "- Chi-squared test\n",
+    "\n",
+    "- Total variance distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
