added new metric notes

--- a/Data-Science-Perspective/Metrics-Guide/metrics.ipynb
+++ b/Data-Science-Perspective/Metrics-Guide/metrics.ipynb
@@ -11,7 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Over Sampling Methods"
+    "## Just like in training, it is recommended to use several metrics to determine the prediction accuracy, especially in the case when classes are not balanced:\n",
+    "\n",
+    "### Accuracy\n",
+    "- General overall accuracy\n",
+    "\n",
+    "### Recall\n",
+    "- What fraction of overall positives were correct\n",
+    "\n",
+    "### Precision\n",
+    "- Determine when the costs of false positive are high\n",
+    "\n",
+    "### F1 Score\n",
+    "- Analysis of the trade-off between recall and precision"
    ]
   },
   {
