added new models;

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -170,6 +170,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Real-time pipelines can be implemented manually by chaining individual containerized functions or can be automated by using a real-time pipeline framework such as MLRun serving graphs, Apache Beam, or AWS Step Functions. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
