added new models

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -177,6 +177,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## A CI/CD pipeline for an ML application will likely implement the following steps:\n",
+    "\n",
+    "- Data preparation\n",
+    "\n",
+    "- Model training using hyperparameters and grid search\n",
+    "\n",
+    "- Model evaluation\n",
+    "\n",
+    "- Application pipeline deployment (with the best model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
