added new modeling

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -213,6 +213,34 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Data versioning, lineage, and metadata management are a set of essential MLOps practices that address the following:\n",
+    "\n",
+    "### Data quality\n",
+    "- Tracing data through an organization’s systems and collecting metadata and lineage information can help identify errors and inconsistencies. This makes it possible to take corrective action and improve data quality.\n",
+    "\n",
+    "### Model reproducibility and traceability\n",
+    "- Access to historical data versions allows us to reproduce model results and can be used for model debugging, troubleshooting, and trying out different parameter sets.\n",
+    "\n",
+    "### Data governance and auditability\n",
+    "- By understanding the origin and history of data, organizations can ensure that data follows expected policies and regulations, tracks sources of errors, and performs audits or investigations.\n",
+    "\n",
+    "### Compliance\n",
+    "- Data lineage can help organizations demonstrate compliance with regulations such as GDPR and HIPAA.\n",
+    "\n",
+    "### Simpler data management\n",
+    "- Metadata and lineage information enables better data discovery, mappings, profiling, integration, and migrations.\n",
+    "\n",
+    "### Better collaboration\n",
+    "- Data versioning and lineage can facilitate cooperation between data scientists and ML engineers by providing a clear and consistent view of the data used in ML models and when handling upgrades.\n",
+    "\n",
+    "### Dependency tracking\n",
+    "- Understanding how each data, parameter, or code change contributes to the results and providing insights into which data or model objects need to change due to data source modification."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
