added enw files

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -249,6 +249,34 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Here are some examples of analytic transformations that can be performed on structured data:\n",
+    "\n",
+    "### Filtering\n",
+    "- Selecting a subset of the data based on certain criteria, such as a specific date range or specific values in a column.\n",
+    "\n",
+    "### Sorting\n",
+    "- Ordering the data based on one or more columns, such as sorting by date or by a specific value.\n",
+    "\n",
+    "### Grouping\n",
+    "- Organizing the data into groups based on one or more columns, such as grouping by product category or by city.\n",
+    "\n",
+    "### Aggregation\n",
+    "- Calculating summary statistics, such as count, sum, average, maximum, and standard deviation, for one or more columns.\n",
+    "\n",
+    "### Joining\n",
+    "- Combining data from multiple tables or datasets based on common columns, such as joining a table of sales data with a table of customer data.\n",
+    "\n",
+    "### Mapping\n",
+    "- Mapping values from one or more columns to new column values using user-defined operations or code. Stateful mapping can calculate new values based on original values and accumulated states from older entries (for example, time passed from the last login).\n",
+    "\n",
+    "### Time series analysis\n",
+    "- Analyzing or aggregating data over time, such as identifying trends, patterns, or anomalies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
