added new models

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -277,6 +277,25 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## The following techniques can be used to process unstructured data or convert it to structured data:\n",
+    "\n",
+    "### Text mining\n",
+    "- Using NLP techniques to extract meaning and insights from text data. Text mining can extract information such as sentiment, entities, and topics from text data.\n",
+    "\n",
+    "### Computer vision\n",
+    "- Using image and video processing techniques to extract information from visual data. Computer vision can extract information such as object recognition, facial recognition, and image classification.\n",
+    "\n",
+    "### Audio and speech recognition\n",
+    "- Using speech-to-text and audio processing techniques to extract meaning and insights from audio data. Audio and speech recognition can extract information such as speech-to-text, sentiment, and speaker identification.\n",
+    "\n",
+    "### Data extraction\n",
+    "- Using techniques such as web scraping and data extraction to pull out structured data from unstructured data sources."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
