added new notes

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -296,6 +296,28 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Various ML methods can be used to transform raw data into more meaningful data, for example:\n",
+    "\n",
+    "### Clustering\n",
+    "- Grouping similar data points based on certain characteristics, such as customers with similar purchasing habits\n",
+    "\n",
+    "### Dimensionality reduction\n",
+    "- Reducing the number of features in a dataset to make it easier to analyze or visualize\n",
+    "\n",
+    "### Regression and classification\n",
+    "- Predicting a class or a value based on other data features\n",
+    "\n",
+    "### Imputing\n",
+    "- Determining the expected value based on other data points in case of missing data\n",
+    "\n",
+    "### Embedding\n",
+    "- Representing a sequence of text, audio, or an image as a numeric vector that preserves the semantic relationships or contextual characteristics."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
