added new notes

--- a/ML-OPS/pipelines.ipynb
+++ b/ML-OPS/pipelines.ipynb
@@ -318,6 +318,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Distributed Data Processing Architectures\n",
+    "\n",
+    "### Interactive\n",
+    "- A request or an update arrives, is processed, and a response is returned immediately; for example, SQL and NoSQL databases, data warehouses, key/value stores, graph databases, time series databases, and cloud services.\n",
+    "\n",
+    "### Batch\n",
+    "- A job is started on a request or a scheduled time, data is fetched and processed, and the results are written to the target storage after completion. Batch jobs usually take longer to process. Example frameworks for batch data processing include Hadoop, Spark, and Dask.\n",
+    "\n",
+    "### Streaming\n",
+    "- Continuous processing of incoming requests or chunks of data and writing the results in real time to a target storage or message queue."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
